assets/css/main.css
:root {
    --red:                      #e06c75;
    --green:                    #98c379;
    --yellow:                   #e5c07b;
    --blue:                     #61afef;
    --magenta:                  #c678dd;
    --cyan:                     #56b6c2;
    --foreground:               #dcdfe4;
    --background:               #282c34;
    --background-code:          #191e26;
    --scrollbar:                #3d4148;
    --border-color:             #dcdfe4;
    --border-thickness:         1px;
    --width:                    80ch;
    --paragraph-spacing:        1.5em;
}

.accent-red {
    color: var(--red);
}

.accent-green {
    color: var(--green);
}

.accent-yellow {
    color: var(--yellow);
}

.accent-blue {
    color: var(--blue);
}

.accent-magenta {
    color: var(--magenta);
}

.accent-cyan {
    color: var(--cyan);
}

.accent-foreground {
    color: var(--foreground);
}

html, body {
    background-color: var(--background);
    color: var(--foreground);
    margin: 0px;
    height: 100%;
}

header, main, footer {
    max-width: var(--width);
    width: 80%;
}

header {
    display: flex;
    flex-flow: row wrap;
    gap: 0.5rem;
    row-gap: 0.75rem;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 30px;
}

main {
    flex-grow: 1;
}

hr {
    height: 0px;
    border: none;
    border-top: var(--border-thickness) solid var(--border-color);
    margin: var(--paragraph-spacing) 0;
}

hr:first-child {
    margin: 0 0 var(--paragraph-spacing) 0;
}

hr.ornamental {
    width: 20%;
    margin: var(--paragraph-spacing) auto;
}


div.content p {
    text-align: justify;
    hyphens: auto;
    line-height: 1.62;
    margin: var(--paragraph-spacing) 0;
}

div.book-style > p:first-child::first-line,
div.book-style h2 + p::first-line {
    font-variant: small-caps;
}

div.book-style > p:has(+p) {
    margin-bottom: 0;
}

div.book-style > p + p {
    margin-top: 0;
    text-indent: 1em;
}

div.book-style > h2:has(+p),
div.book-style > h3:has(+p) {
    margin-bottom: 0.5em;
}

div.book-style > h2 + p,
div.book-style > h3 + p {
    margin-top: 0.5em;
}

div.footnotes {
    margin: var(--paragraph-spacing) 0;
}

div.book-style > hr.ornamental {
    text-align: center;
    overflow: visible;
    position: relative;

    &::before {
        content: "";
        background: var(--foreground);
        color: var(--foreground);
        margin: 0 0 0 -4px;
        padding: 1px;
        position: absolute;
        height: 8px;
        width: 8px;
        top: -5px;
        transform:rotate(45deg);
    }
}

.wc {
    font-style: italic;
}

sup {
    line-height: 1;
    font-size: 0.8rem;
}

footer {
    text-align: center;
    padding-top: 75px;
    padding-bottom: 30px;
    font-size: 0.8em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--blue);
}

h2 {
    border-bottom: var(--border-thickness) var(--border-color) solid;
    padding-bottom: 0.5em;
}

h2.nounderline {
    border-bottom: 0;
    padding-bottom: 0;
}

a {
    color: var(--cyan);
    text-decoration: none;
    transition: color 0.5s;
}

a:hover {
    color: var(--green);
}

table {
    margin: var(--paragraph-spacing) 0;
    width: 100%;
}

table, th, td {
    text-align: left;
    border-bottom: var(--border-thickness) var(--border-color) solid;
    border-collapse: collapse;
}

th, td {
    padding: 0.5rem 1rem;
}

table.lntable {
    width: auto;
}

code {
    font-family: 'Source Code Pro', monospace;
    padding: .2em .4em;
    font-size: .85rem;
    background-color: var(--background-code);
    border-radius: 6px;
}

pre code {
    padding: 0;
    border-radius: 0;
    background-color: var(--background);
}

div.chroma {
    width: 100%;
    font-size: .85rem;
    overflow-x: auto;
    scrollbar-color: var(--scrollbar) var(--background);
}

blockquote {
    margin: 0 0 var(--paragraph-spacing) 0;
    padding: 0 1em;
    border-left: 3px solid var(--foreground);
    font-style: italic;
}

.top-flex-div {
    box-sizing: border-box;
    padding-top: 30px;
    font-family: 'Source Serif 4', serif;
    font-size: 18px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    margin: 0px;
    height: 100%;
}

.main-nav {
    width: 100%;
    justify-content: space-between;
}

.main-nav, .icon-nav {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    gap: 0.75rem;
}

.main-nav-button, .main-nav-button-now, .icon-nav-button {
    color: var(--foreground);
    vertical-align: middle;
    text-decoration: none;
    text-align: center;
}

.main-nav-button, .main-nav-button-now {
    flex-grow: 1;
    padding: 0.2rem 0.5rem;
    border-radius: 5px;
    border-style: solid;
    border-width: 3px;
    border-color: var(--foreground);
    transition: box-shadow 0.3s;
}

.main-nav-button:hover, .main-nav-button-now:hover {
    color: var(--foreground);
    box-shadow: 3px 3px var(--cyan);
}

.main-nav-button-now {
    border-color: var(--green);
}

.icon-nav-button {
    transition: text-shadow 0.3s;
}

.icon-nav-button:hover {
    color: var(--foreground);
    text-shadow: 1px 1px var(--cyan);
}

.invisible-link {
    color: var(--foreground);
    text-decoration: none;
}

.summary-timestamp {
    margin-bottom: 0.2rem;
}

.summary-link {
    margin: 0.4rem 0;
    color: var(--green);
    transition: color 0.5s;
}

.summary-description {
    margin-top: 0.2rem;
}

.summary-link:hover {
    color: var(--cyan);
}

.not-found {
    display: flex;
    height: 100%;
    flex-flow: column nowrap;
    justify-content: center;
    font-size: 2em;
    text-align: center;
}

.icon {
    width: 1.5em;
    height: 1.5em;
    vertical-align: text-top;
}

.inline-icon {
    width: 1.3em;
    height: 1.3em;
    vertical-align: text-top;
}

p.annotated-link {
    margin-bottom: 0 !important;
}

p.annotated-link-text {
    margin-top: 0 !important;
    margin-left: 1.5rem !important;
}

#TableOfContents ul {
    list-style-type: none;
    margin: var(--paragraph-spacing) 0;
    padding: 0;
}

#main-title {
    color: var(--foreground);
    margin: 0px;
    transition: text-shadow 0.3s;
}

#main-title:hover {
    text-shadow: 2px 2px var(--cyan);
}

#four-o-four {
    font-size: 3em;
    margin: 0px;
}

#footer-rule {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

#icon-github {
    margin-right: 3px;
}

@media only screen and (max-width: 768px) {
    .top-flex-div {
        padding-top: 15px;
        font-size: 16px;
    }

    header, main, footer {
        width: 90%;
    }
}

@media print {
    :root {
        --red:                  #e45649;
        --green:                #50a14f;
        --yellow:               #c18401;
        --blue:                 #0184bc;
        --magenta:              #a626a4;
        --cyan:                 #0997b3;
        --foreground:           #383a42;
        --background:           #fafafa;
        --background-code:      #e2e2e2;
        --scrollbar:            #e2e2e2;
        --border-color:         #383a42;
    }

    nav.icon-nav {
        display: none !important;
    }

    nav.main-nav {
        display: none !important;
    }

    div.top-flex-div {
        display: block;
    }

    header, main, footer {
        max-width: none;
        width: auto;
        padding: 0 1rem;
    }

    footer {
        margin-top: 1rem;
    }

    div.book-style > hr.ornamental::before {
        display: none;
    }
}


/* Background */ .bg { color:var(--foreground);background-color:var(--background); }
/* PreWrapper */ .chroma { color:var(--foreground);background-color:var(--background); }
/* LineLink */ .chroma .lnlinks { outline:none;text-decoration:none;color:inherit }
/* LineTableTD */ .chroma .lntd { vertical-align:top;padding:0;margin:0;border:0; }
/* LineTable */ .chroma .lntable { border-spacing:0;padding:0;margin:0;border:0; }
/* LineHighlight */ .chroma .hl { background-color:#3d4148 }
/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#55595f }
/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#55595f }
/* Line */ .chroma .line { display:flex; }
/* Keyword */ .chroma .k { color:var(--magenta) }
/* KeywordConstant */ .chroma .kc { color:var(--yellow) }
/* KeywordDeclaration */ .chroma .kd { color:var(--magenta) }
/* KeywordNamespace */ .chroma .kn { color:var(--magenta) }
/* KeywordPseudo */ .chroma .kp { color:var(--magenta) }
/* KeywordReserved */ .chroma .kr { color:var(--magenta) }
/* KeywordType */ .chroma .kt { color:var(--yellow) }
/* Name */ .chroma .n { color:var(--red) }
/* NameAttribute */ .chroma .na { color:var(--red) }
/* NameClass */ .chroma .nc { color:var(--yellow) }
/* NameConstant */ .chroma .no { color:var(--red) }
/* NameDecorator */ .chroma .nd { color:var(--blue) }
/* NameEntity */ .chroma .ni { color:var(--red) }
/* NameException */ .chroma .ne { color:var(--red) }
/* NameLabel */ .chroma .nl { color:var(--red) }
/* NameNamespace */ .chroma .nn { color:var(--red) }
/* NameOther */ .chroma .nx { color:var(--red) }
/* NameProperty */ .chroma .py { color:var(--red) }
/* NameTag */ .chroma .nt { color:var(--red) }
/* NameBuiltin */ .chroma .nb { color:var(--yellow) }
/* NameBuiltinPseudo */ .chroma .bp { color:var(--yellow) }
/* NameVariable */ .chroma .nv { color:var(--red) }
/* NameVariableClass */ .chroma .vc { color:var(--red) }
/* NameVariableGlobal */ .chroma .vg { color:var(--red) }
/* NameVariableInstance */ .chroma .vi { color:var(--red) }
/* NameVariableMagic */ .chroma .vm { color:var(--red) }
/* NameFunction */ .chroma .nf { color:var(--blue);font-weight:bold }
/* NameFunctionMagic */ .chroma .fm { color:var(--cyan);font-weight:bold }
/* LiteralString */ .chroma .s { color:var(--green) }
/* LiteralStringAffix */ .chroma .sa { color:var(--green) }
/* LiteralStringBacktick */ .chroma .sb { color:var(--green) }
/* LiteralStringChar */ .chroma .sc { color:var(--green) }
/* LiteralStringDelimiter */ .chroma .dl { color:var(--green) }
/* LiteralStringDoc */ .chroma .sd { color:var(--green) }
/* LiteralStringDouble */ .chroma .s2 { color:var(--green) }
/* LiteralStringEscape */ .chroma .se { color:var(--green) }
/* LiteralStringHeredoc */ .chroma .sh { color:var(--green) }
/* LiteralStringInterpol */ .chroma .si { color:var(--green) }
/* LiteralStringOther */ .chroma .sx { color:var(--green) }
/* LiteralStringRegex */ .chroma .sr { color:var(--green) }
/* LiteralStringSingle */ .chroma .s1 { color:var(--green) }
/* LiteralStringSymbol */ .chroma .ss { color:var(--green) }
/* LiteralNumber */ .chroma .m { color:var(--yellow) }
/* LiteralNumberBin */ .chroma .mb { color:var(--yellow) }
/* LiteralNumberFloat */ .chroma .mf { color:var(--yellow) }
/* LiteralNumberHex */ .chroma .mh { color:var(--yellow) }
/* LiteralNumberInteger */ .chroma .mi { color:var(--yellow) }
/* LiteralNumberIntegerLong */ .chroma .il { color:var(--yellow) }
/* LiteralNumberOct */ .chroma .mo { color:var(--yellow) }
/* Operator */ .chroma .o { color:var(--cyan) }
/* OperatorWord */ .chroma .ow { color:var(--cyan) }
/* Comment */ .chroma .c { color:#7f848e }
/* CommentHashbang */ .chroma .ch { color:#7f848e }
/* CommentMultiline */ .chroma .cm { color:#7f848e }
/* CommentSingle */ .chroma .c1 { color:#7f848e }
/* CommentSpecial */ .chroma .cs { color:#7f848e }
/* CommentPreproc */ .chroma .cp { color:var(--yellow) }
/* CommentPreprocFile */ .chroma .cpf { color:var(--green) }
/* GenericDeleted */ .chroma .gd { color:var(--red) }
/* GenericInserted */ .chroma .gi { color:var(--green);font-weight:bold }

